prevent image distortion when reaching max size

--- a/itembox.css
+++ b/itembox.css
@@ -82,6 +82,7 @@ body { background-color: #222; color: #e6e6e6}
 .itembox .item img {
 	max-width: 100%;
 	max-height: 100%;
+	object-fit: contain;
 	image-rendering: pixelated;
 }
 
